--- a/public/deny.html
+++ b/public/deny.html
@@ -148,6 +148,7 @@
   </header>
 
   <main role="main" class="inner cover">
+    <img src="200.gif">
     <h1 class="cover-heading">Access has been blocked.</h1>
     <p class="lead">We've sent you an email with further instructions.</p>
     <!--
